# project_vexriscv_ruffle_axi_linux

./: .gitmodules  README.md
cfg/: soc_init_jtag_vpi.cfg  tcp_connect.cfg  xilinx_usb_connect.cfg
hdl/: README.md  fusesoc.conf
sw/: CMakeLists.txt  README.md  makefile
sw/baremetal/: CMakeLists.txt
sw/baremetal/examples/: CMakeLists.txt
sw/baremetal/riscv-gnu-baremetal-addons/: bspconfig.h  xparameters.h
